--- a/css/styles.css
+++ b/css/styles.css
@@ -330,6 +330,9 @@ html {
     -webkit-text-size-adjust : 100%;
 }
 
+.logo-title {
+   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
 body {
     margin : 0;
 }
