--- a/css/styles.css
+++ b/css/styles.css
@@ -332,6 +332,25 @@ html {
 
 .logo-title {
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    color: golden;
+    	position: relative;
+	cursor: pointer;
+	height: var(--size);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	span {
+		font-size: var(--font-size);
+		font-weight: 700;
+		-webkit-text-stroke: 2px var(--color);
+		color: transparent;
+		transition: 0.5s;
+	}
+
+	&:hover span {
+		opacity: 0;
+	}
 }
 
 body {
