--- a/css/styles.css
+++ b/css/styles.css
@@ -1406,7 +1406,7 @@ h6,
 h1,
 .h1 {
      margin-top    : var(--vspace-2);
-     margin-top    : var(--vspace-2);
+     margin-bottom    : var(--vspace-2);
 }
 
 h2,
@@ -1429,7 +1429,7 @@ h6,
 
 h1,
 .h1 {
-    font-size      : 2px;
+    font-size      : 20px;
     line-height    : calc(2.25 * var(--space));
     letter-spacing : -.020em;
 }
