--- a/css/styles.css
+++ b/css/styles.css
@@ -655,7 +655,7 @@ textarea {
 .column {
     display : block;
     flex    : 1 1 0%;
-    padding : 5px;
+    padding-top : 15px;
 }
 
 .collapse>.column,
@@ -1406,7 +1406,7 @@ h6,
 h1,
 .h1 {
      margin-top    : var(--vspace-2);
-     margin-bottom    : var(--vspace-2);
+      margin-bottom : 15px;
 }
 
 h2,
@@ -1416,7 +1416,7 @@ h3,
 h4,
 .h4 {
     margin-top    : 2px;
-    margin-bottom : var(--vspace-0_75);
+    margin-bottom : 15px;
 }
 
 h5,
@@ -1424,7 +1424,7 @@ h5,
 h6,
 .h6 {
     margin-top    : 2px;
-    margin-bottom : var(--vspace-0_5);
+    margin-bottom : 15px;
 }
 
 h1,
