--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-
-
-
 @charset "UTF-8";
 /* =================================================================== 
  * Mueller Main Stylesheet
@@ -655,7 +652,6 @@ textarea {
 .column {
     display : block;
     flex    : 1 1 0%;
-    padding-top : 15px;
 }
 
 .collapse>.column,
@@ -1396,7 +1392,7 @@ h6,
 .h5,
 .h6 {
     font-family            : Georgia, 'Times New Roman', Times, serif;
-    font-weight            : 600;
+    font-weight            : 700;
     color                  : rgb(38, 121, 173);
     font-variant-ligatures : common-ligatures;
     text-rendering         : optimizeLegibility;
@@ -1405,7 +1401,7 @@ h6,
 
 h1,
 .h1 {
-     margin-top    : var(--vspace-2);
+     margin-top    : 10px);
       margin-bottom : 15px;
 }
 
