--- a/css/styles.css
+++ b/css/styles.css
@@ -330,6 +330,7 @@ html {
 .logo-title {
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     color: white;
+	font-size: 18px;
     	position: relative;
 	cursor: pointer;
 	height: var(--size);
@@ -338,7 +339,6 @@ html {
 	align-items: center;
 
 	span {
-		font-size: var(--font-size);
 		font-weight: 700;
 		-webkit-text-stroke: 2px var(--color);
 		color: transparent;
